# GameOfLife

./: CMakeLists.txt  README.txt
src/: main.c  main.h
